--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,9 @@
 root = true
 
 [*]
-indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[{*.kt,*.kts}]
+indent_size = 2
